--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ body {
     background-color: #ededed;
 }
 
-header {
-    background-color: var(--secondary-color);
-    color: #fff;
-    padding: 1rem;
-    text-align: center;
+.name-letter {
+    text-shadow: 2px 2px 4px #000000d6, -2px -2px 4px #97979786; /* Add a slight shadow */
 }
 
-header h1 {
-    margin-bottom: 10px;
-    margin-left: 200px; /* Match the width of the left panel */
+.section-title-letter{
+    text-shadow:inset 2px 2px 4px #000000d6, inset -2px -2px 4px #97979786; /* Add a slight shadow */
+}
+
+header {
+    margin-left: 190px; /* Match the width of the left panel */
 }
 
 main {
@@ -61,7 +61,7 @@ main {
         margin-left: 0; /* Remove margin when left panel is hidden */
     }
 
-    header h1 {
+    header {
         margin-left: 0px; /* Match the width of the left panel */
     }
 }
@@ -90,12 +90,21 @@ main {
     display: block; /* Make the link a block element to occupy full width */
     padding: 20px; /* Add padding for better clickability */
     border-radius: 5px; /* Add border radius for rounded corners */
-    transition: transform 0.3s ease-in-out; /* Add transition for smooth animation */
+    transition: transform 0.1s ease-in-out; /* Add transition for smooth animation */
+    box-shadow: 7px 7px 14px #262626, -7px -7px 14px #6666669b;
 }
 
 #left-panel ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.1); /* Change background color on hover */
-    transform: scale(1.1); /* Scale up the button on hover */
+    /* Scale up the button on hover */
+    transform: scale(1.1);
+    /* Change text color */
+    color: #00f2ff;
+}
+
+#left-panel ul li a:active {
+    box-shadow: inset 7px 7px 14px #262626, inset -7px -7px 14px #6666669b;
+    /* Scale down the button on active */
+    transform: scale(0.9);
 }
 
 /* Update section styles */
@@ -103,36 +112,51 @@ section {
     margin-bottom: 40px;
     padding: 20px;
     border-radius: 10px;
+    /* background-color: #ededed; */
     background-color: #ededed;
     box-shadow:  7px 7px 14px #c9c9c9,
              -7px -7px 14px #ffffff;
     color: var(--text-color);
 }
 
+section:hover {
+    box-shadow: inset 7px 7px 14px #c9c9c9,
+            inset -7px -7px 14px #ffffff;
+}
+
+section:active {
+    box-shadow: inset 7px 7px 14px #c9c9c9,
+            inset -7px -7px 14px #ffffff;
+}
+
 section h2 {
     color: #343a40;
     margin-bottom: 20px;
+    /* transition: text-shadow 0.3s ease-in-out; */
 }
 
-.about-class {
+
+section:hover .project-class {
+    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
+}
+section:active .project-class {
+    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
+}
+
+section:hover .content-class {
+    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
+}
+section:active .content-class {
+    box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
+}
+
+.project-class {
     background-color: #ededed;
     padding: 20px;
     border-radius: 5px;
     box-shadow: inset 7px 7px 14px #c9c9c9,
             inset -7px -7px 14px #ffffff;
-}
-
-.project-class {
-    margin-bottom: 15px;
-}
-
-.project-class {
-    background-color: #ededed;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: inset 7px 7px 14px #c9c9c9,
-            inset -7px -7px 14px #ffffff;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .project-class h3 {
@@ -140,31 +164,28 @@ section h2 {
     margin-bottom: 10px;
 }
 
-.experience-class {
+.content-class {
     background-color: #ededed;
     padding: 20px;
     border-radius: 5px;
     box-shadow: inset 7px 7px 14px #c9c9c9,
             inset -7px -7px 14px #ffffff;
 }
-
-.experience-class h3 {
+.content-class h3 {
     color: #007bff;
     margin-bottom: 10px;
+}
+
+.content-class ol {
+    margin-left: 20px;
+}
+.content-class ul {
+    margin-left: 20px;
 }
 
 .experience-class p {
     margin-bottom: 15px;
 }
-
-.courses-class {
-    background-color: #ededed;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: inset 7px 7px 14px #c9c9c9,
-            inset -7px -7px 14px #ffffff;
-}
-
 .courses-class p {
     display: flex;
     flex-wrap: wrap;
@@ -175,22 +196,17 @@ section h2 {
     margin-bottom: 10px;
 }
 
-#achievements {
-    background-color: #ededed;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 7px 7px 14px #c9c9c9,
-            -7px -7px 14px #ffffff;
-}
-
 .achievements-class {
-    padding: 20px;
+    padding: 30px;
     border-radius: 5px;
     background-color: #ededed;
     box-shadow: inset 7px 7px 14px #c9c9c9,
              inset -7px -7px 14px #ffffff;
 }
-
+.achievements-class:hover {
+    box-shadow: 7px 7px 14px #c9c9c9,
+             -7px -7px 14px #ffffff;
+}
 .achievements ul {
     list-style-type: disc;
     margin-left: 20px;
@@ -229,7 +245,7 @@ footer {
 
 .github-icon:hover img {
     opacity: 0.7;
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
 }
 
 .linkedin-icon img {
@@ -238,13 +254,14 @@ footer {
 
 .linkedin-icon:hover img {
     opacity: 0.7;
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
 }
 
 .icon-container {
+    padding-left: 10px;
     display: flex;
     justify-content: space-between;
-    width: 300px;
+    width: 350px;
 }
 /* Update icon styles */
 .icon-container a {
@@ -253,7 +270,7 @@ footer {
     padding: 15px;
     border-radius: 10px;
     box-shadow: 7px 7px 14px #c9c9c9, -7px -7px 14px #ffffff;
-    transition: transform 0.3s, box-shadow 0.3s;
+    transition: transform 0.1s, box-shadow 0.1s;
 }
 
 /* Update icon hover styles */
@@ -266,4 +283,10 @@ footer {
 .icon-container a:active {
     transform: scale(0.9);
     box-shadow: inset 3px 3px 6px #c9c9c9, inset -3px -3px 6px #ffffff;
+}
+
+text {
+    font-size: 150px;
+    font-family: 'Oswald', serif;
+    font-weight: 900;
 }
